--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@
 # Except the hf_translation.py file
 !/modules/translation/hf_translation.py
 
+# Ignore everything in the tests directory
+/tests/*
+
+# Except the TestTranslate.py
+!/tests/TestTranslate.py
 # Ignore .env
 .env
