Change description to github pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: ChatBridge
-description: Un sitio web interactivo para el proyecto ChatBridge.
+description: A seamless communication platform that bridges language barriers via WhatsApp. ChatBridge automatically translates messages between languages in real-time, using advanced AI models, ensuring fluid and natural conversations across the globe.
